// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Consent banner component when there is no cookie renders the banner 1`] = `
<main
  id="start-main-content"
>
  <div
    className="card--container ds-u-margin-top--7"
  >
    <div
      className="ds-l-container"
    >
      <div
        className="ds-l-row card"
      >
        <div
          className="ds-l-col--1 ds-u-margin-left--auto"
        />
        <div
          className="ds-l-col--12 ds-l-sm-col--10 ds-l-lg-col--6"
        >
          <p>
            This is a U.S. government service. Your use indicates your consent to monitoring, recording, and no expectation of privacy. Misuse is subject to criminal and civil penalties.
            <Button
              component="button"
              onClick={[Function]}
              size="small"
              type="button"
              variation="transparent"
            >
              Read more details
            </Button>
          </p>
          <div
            className="ds-u-text-align--center"
          >
            <Button
              component="button"
              onClick={[Function]}
              type="button"
              variation="primary"
            >
              Agree and continue
            </Button>
          </div>
        </div>
        <div
          className="ds-l-col--1 ds-u-margin-right--auto"
        />
      </div>
    </div>
  </div>
</main>
`;

exports[`Consent banner component when there is no cookie toggles consent details on 1`] = `
<main
  id="start-main-content"
>
  <div
    className="card--container ds-u-margin-top--7"
  >
    <div
      className="ds-l-container"
    >
      <div
        className="ds-l-row card"
      >
        <div
          className="ds-l-col--1 ds-u-margin-left--auto"
        />
        <div
          className="ds-l-col--12 ds-l-sm-col--10 ds-l-lg-col--6"
        >
          <p>
            This is a U.S. government service. Your use indicates your consent to monitoring, recording, and no expectation of privacy. Misuse is subject to criminal and civil penalties.
            <Button
              component="button"
              onClick={[Function]}
              size="small"
              type="button"
              variation="transparent"
            >
              Read more details
            </Button>
          </p>
          <div
            className="ds-u-text-align--center"
          >
            <Button
              component="button"
              onClick={[Function]}
              type="button"
              variation="primary"
            >
              Agree and continue
            </Button>
          </div>
        </div>
        <div
          className="ds-l-col--1 ds-u-margin-right--auto"
        />
      </div>
    </div>
  </div>
</main>
`;

exports[`Consent banner component when there is no cookie toggles consent details on 2`] = `
<main
  id="start-main-content"
>
  <div
    className="card--container ds-u-margin-top--7"
  >
    <div
      className="ds-l-container"
    >
      <div
        className="ds-l-row card"
      >
        <div
          className="ds-l-col--1 ds-u-margin-left--auto"
        />
        <div
          className="ds-l-col--12 ds-l-sm-col--10 ds-l-lg-col--6"
        >
          <p>
            This is a U.S. government service. Your use indicates your consent to monitoring, recording, and no expectation of privacy. Misuse is subject to criminal and civil penalties.
          </p>
          <p>
            This warning banner provides privacy and security notices consistent with applicable federal laws, directives, and other federal guidance for accessing this Government system, which includes (1) this computer network, (2) all computers connected to this network, and (3) all devices and storage media attached to this network or to a computer on this network.
          </p>
          <p>
            This system is provided for Government authorized use only.
          </p>
          <p>
            Unauthorized or improper use of this system is prohibited and may result in disciplinary action and/or civil and criminal penalties.
          </p>
          <p>
            Personal use of social media and networking sites on this system is limited as to not interfere with official work duties and is subject to monitoring.
          </p>
          <p>
            By using this system, you understand and consent to the following:
          </p>
          <ul>
            <li>
              The Government may monitor, record, and audit your system usage, including usage of personal devices and email systems for official duties or to conduct HHS business. Therefore, you have no reasonable expectation of privacy regarding any communication or data transiting or stored on this system. At any time, and for any lawful Government purpose, the government may monitor, intercept, and search and seize any communication or data transiting or stored on this system.
            </li>
            <li>
              Any communication or data transiting or stored on this system may be disclosed or used for any lawful Government purpose. To continue, you must accept the terms and conditions. If you decline, your login will automatically be cancelled.
            </li>
          </ul>
          <div
            className="ds-u-text-align--center"
          >
            <Button
              component="button"
              onClick={[Function]}
              type="button"
              variation="primary"
            >
              Agree and continue
            </Button>
          </div>
        </div>
        <div
          className="ds-l-col--1 ds-u-margin-right--auto"
        />
      </div>
    </div>
  </div>
</main>
`;
